<resources>
    <string name="app_name">EAngkotDriver</string>
    <string name="title_activity_open_map">Map</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="desc_login_button">Login button for login activity.</string>
    <string name="btn_text_login">Login</string>
    <string name="desc_openmap_button">Open map for main activity</string>
    <string name="btn_text_openmap">Open Map</string>
    <string name="welcome_driver">Welcome driver,</string>
    <string name="get_fare">Get Fare</string>
    <string name="daftar_tarif_pelanggan">DAFTAR TARIF PELANGGAN</string>
</resources>
